# hash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  devspec.md  hash.c  hash.h  test.c
.github/workflows/: cmake-single-platform.yml
